# sgt-django-be

./: .gitignore  pyproject.toml
sgtbackend/: .flake8  README.md  makefile  manage.py  pyproject.toml  pytest.ini
sgtbackend/call_caddy/: admin.py  apps.py
sgtbackend/call_caddy/fixtures/: golfer.json  tournament.json
sgtbackend/call_caddy/migrations/: 0001_initial.py  0002_alter_golfer_table_alter_tournament_table.py
sgtbackend/call_caddy/models/: __init__.py  golfer.py  tournament.py  tournaments.py
sgtbackend/call_caddy/services/: leaderboard_call.py  rapid_api_wrapper.py  schedule_call.py  tournament_call.py
sgtbackend/call_caddy/tests/: test_services.py
sgtbackend/grounds_crew/: apps.py  views.py
sgtbackend/grounds_crew/fixtures/: user.json
sgtbackend/grounds_crew/migrations/: 0001_initial.py
sgtbackend/grounds_crew/models/: user.py
sgtbackend/grounds_crew/templates/: login.html
sgtbackend/rough_draft/: admin.py  apps.py
sgtbackend/rough_draft/fixtures/: match_pick.json
sgtbackend/rough_draft/migrations/: 0002_alter_matchpick_table.py
sgtbackend/rough_draft/models/: __init__.py  match_pick.py
sgtbackend/rough_picks/: admin.py  apps.py
sgtbackend/rough_picks/fixtures/: match_pick.json
sgtbackend/rough_picks/migrations/: 0001_initial.py
sgtbackend/rough_picks/models/: __init__.py  match_pick.py
sgtbackend/scorecard/: admin.py  apps.py
sgtbackend/scorecard/fixtures/: match_result.json  score.json
sgtbackend/scorecard/migrations/: 0001_initial.py  0002_alter_matchresult_table_alter_score_table.py
sgtbackend/scorecard/models/: __init__.py  match_result.py  score.py
sgtbackend/sgtbackend/: asgi.py  settings.py  urls.py  wsgi.py
