[tool.poetry]
name = "sgt-django-be"
version = "0.1.0"
description = ""
authors = ["Viktor R <122321007+vktr-r2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
